# gier

./: .gitignore  LICENSE  README.md  pyproject.toml  sample.py  setup_test_repos.py  test-repositories.yml
.github/workflows/: publish.yml
examples/: space_sim.rs  state_machine.rs  toy.py
skills/cher/: SKILL.md
skills/gier/: SKILL.md
src/codehierarchy/: __init__.py  __main__.py  core.py  curly_analyzer.py  output.py  python_analyzer.py
src/gier/: __main__.py  core.py  curly_analyzer.py  output.py  python_analyzer.py
tests/: test_anonymous.py  test_codehierarchy.py  test_examples.py  test_gier.py  test_snapshot_server.py
tests/examples/: README.md  bitcoin-subsidy.txt  express-app-use.txt  fastify-http-method.txt  libgit2-remote-api.txt  rustpython-public-fns.txt  signal-suspend-fun.txt  svelte-compile.txt  ytdlp-base-extractor.txt  zlib-gzread.txt
tests/execution-snapshots/: aspnetcore-configure.txt  bitcoin-dirty-blockindex.txt  bitcoin-invalid-block-found.txt  bitcoin-member-fns.txt  homeassistant-async-remove.txt  homeassistant-signal-removed.txt  imgui-mark-ini-dirty.txt  imgui-void-fns.txt  kestra-plugin.txt  libgit2-connect-ext.txt  libgit2-create-funnel.txt  nushell-run.txt  ytdlp-dispatch.txt  zlib-again-flag.txt
tools/: snapshot_server.py
