[project]
name = "gier"
version = "0.0.2"
description = "gier: grep with code-block hierarchy awareness; chier is its companion for whole-file hierarchy queries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Julian Habekost" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
urls = { Homepage = "https://github.com/jejay/gier", Repository = "https://github.com/jejay/gier", Issues = "https://github.com/jejay/gier/issues" }

[project.scripts]
chier = "gier.__main__:chier_cli"
gier = "gier.__main__:gier_cli"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"
